Fix placeholder text legibility with pseudo selector placeholder

--- a/src/index.css
+++ b/src/index.css
@@ -253,6 +253,11 @@ textarea {
 
     padding: .3rem .5rem;
 }
+
+input::placeholder,
+textarea::placeholder {
+    color: rgb(218, 218, 218);
+}
 /* Accessibility Features ----------------------------- */
 .skip-link {
     height: 1px;
